Create get product endpoints
